Improved availibility with goroutine

--- a/api-gateway/.env.example
+++ b/api-gateway/.env.example
@@ -2,5 +2,9 @@
 # Options could be "test", "prod", or empty for the default broker.
 RABBITMQ_ENV=
 
+# We now pass the RabbitMQ URLs as an environment variable.                                │
+# This makes it easy to add more replicas without changing code
+RABBITMQ_URLS=amqp://guest:guest@rabbitmq1:5672/,amqp://guest:guest@rabbitmq2:5672/
+
 # Address for the Redis server.
 REDIS_ADDR=localhost:6379
