user authentication with CassandraDB and JWT done

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ RABBITMQ_ENV=
 
 # We now pass the RabbitMQ URLs as an environment variable.                                │
 # This makes it easy to add more replicas without changing code
-RABBITMQ_URLS=amqp://guest:guest@rabbitmq1:5672/,amqp://guest:guest@rabbitmq2:5672/
+RABBITMQ_URLS=amqp://guest:guest@rabbitmq1:5672/,amqp://guest:guest@rabbitmq2:5673/
 
 # Address for the Redis server.
 REDIS_ADDR=localhost:6379
+
+CASSANDRA_ADDR=localhost:9042
+
+# JWT Secret Key (for production, use a strong, random value)
+JWT_SECRET=your-super-secret-jwt-key-that-should-be-long-and-random
