--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           go-version: '1.24'
       - name: Run tests
-        run: go test ./api-gateway/... ./order-processor/... ./notifier/... ./dashboard/...
+        run: go test ./api-gateway/... ./order-processor/... ./notifier/...
